tests/toy/neg/000765_mutation.toylang
program a = { a = 0 var; } .
